backstage-manifests/localtunnel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-proxy
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-proxy
  template:
    metadata:
      labels:
        app: webhook-proxy
    spec:
      containers:
      - name: smee-client
        image: node:alpine
        command: ["sh", "-c"]
        args:
        - "npx smee-client --url https://smee.io/vVvKlKpQsKv5zv0W --target https://172.17.0.1:8443/api/webhook"
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
