backstage-manifests/backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-pilot-db
  namespace: default
spec:
  selector:
    matchLabels:
      app: backstage-pilot-db
  template:
    metadata:
      labels:
        app: backstage-pilot-db
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: backstage-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backstage-pilot-db-service
  namespace: default
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: backstage-pilot-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-pilot
  namespace: default
  labels:
    app: backstage-pilot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage-pilot
  template:
    metadata:
      labels:
        app: backstage-pilot
    spec:
      serviceAccountName: backstage-cluster-reader
      containers:
      - name: backstage
        image: backstage-pilot:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 7007
        volumeMounts:
        - name: catalog-files-volume
          mountPath: /app/catalog
        - name: main-config-volume
          mountPath: /app/app-config.yaml
          subPath: app-config.yaml
        - name: prod-config-volume
          mountPath: /app/app-config.development.yaml
          subPath: app-config.development.yaml
        securityContext:
          allowPrivilegeEscalation: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
      - name: catalog-files-volume
        configMap:
          name: backstage-local-users-cm
      - name: main-config-volume
        configMap:
          name: backstage-config
      - name: prod-config-volume
        configMap:
          name: backstage-production-config
---
apiVersion: v1
kind: Service
metadata:
  name: backstage-pilot-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 7007
    targetPort: 7007
  selector:
    app: backstage-pilot
