backstage-manifests/keycloak-db-infra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-server
  namespace: default
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.7.2
          args: ["start-dev"]
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: default
spec:
  ports:
    - name: http
      port: 8085
      targetPort: 8080
      protocol: TCP
  selector:
    app: keycloak
