backstage-manifests/keycloak-infrastructure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-server
  namespace: default
  labels:
    app: keycloak
  # Move the ArgoCD options under annotations:
  annotations: 
    argocd.argoproj.io/sync-options: Prune=false,Validate=false
    argocd.argoproj.io/compare-options: IgnoreExtraneous
    argocd.argoproj.io/sync-policy: Manual
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.7.2
          args: ["start-dev", "--http-enabled=true"]
          ports:
            - containerPort: 8085
              name: http
          volumeMounts:
            - name: import-volume
              mountPath: /opt/keycloak/data/import/backstage-realm.json
              subPath: backstage-realm.json
      volumes:
        - name: import-volume
          configMap:
            name: keycloak-drop-in-realm
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: default
  annotations:
    argocd.argoproj.io/sync-policy: Manual
spec:
  ports:
    - name: http
      port: 8085          
      targetPort: 8085   
      protocol: TCP
  selector:
    app: keycloak
